# dotfiles

./: .editorconfig  .gitignore  INSTALL.sh  README.md  SETUP.sh  config.sh  gitconfig  installs.sh  tmux.conf  zprofile  zshrc
config/: .gitconfig  .tmux.conf  .zprofile  .zshrc
config/LaunchAgents/: com.local.KeyRemapping.plist
config/LaunchDaemons/: limit.maxfiles.plist
config/alacritty/: alacritty.toml
config/arc/: cppreference.com.css  discord.com.css  stackoverflow.com.css  trello.com.css  wikipedia.org.css
config/bat/: config
config/discord/: discord.css  vencord-settings.json
config/fastfetch/: ascii.txt  config.jsonc
config/ghostty/: config
config/lazygit/: config.yml
config/neofetch/: ascii.txt  config.conf
config/nushell/: aliases.nu  commands.nu  config.nu  keybinds.nu  prompt.nu  variables.nu
config/nvim/: .stylua.toml  init.lua  lazy-lock.json
config/nvim/templates/: .clang-format  .clang-tidy  .editorconfig  .gersemirc  .gitignore  .html  .yml  CMakeLists.txt  README.md  pyproject.toml  wrangler.toml
config/ohmyposh/: zen.toml
config/opencode/: AGENTS.md
config/vscode/: EXTENSIONS.sh  extensions.txt  keybindings.json  settings.json
config/zed/: settings.json
config/zsh/: aliases.zsh  functions.zsh
other/applescript/: reload_ghostty_config.scpt
other/arc/: canvas.css  cplusplus.com.css  discord.com.css  edstem.org.css  google.com.css  linkedin.com.css  youtube.css
other/discord/: DiscordNight.theme.css  discord.css  (+1 more)
vscode/: keybindings.json  settings.json  vscode.css
zed/: keymap.json  settings.json
(+118 files in other folders)
